# reconciliation-engine

./: Dockerfile  README.MD  config.yaml  main.py  pyproject.toml  requirements.txt
airflow/dags/: reconciliation_pipeline.py
data/: SCHEMA.md  external_transactions.csv  internal_transactions.csv
dbt/: dbt_project.yml
dbt/models/: schema.yml
dbt/models/marts/: fct_reconciled_transactions.sql
dbt/models/staging/: stg_bank_transactions.sql  stg_stripe_transactions.sql
examples/: cloud_config.yaml  config.yaml  db_config.yaml
outputs/: matched.csv  reconciled.csv  unmatched_external.csv  unmatched_internal.csv
scripts/: generate_test_data.py  local_pipeline.py
src/: config_validator.py  db_loader.py  loader.py  recon_engine.py  source_loader.py
src/streaming/: __init__.py  metrics.py  state_manager.py  stream_processor.py  window_manager.py
tests/: conftest.py  test_db_loader.py  test_end_to_end.py  test_main.py  test_recon_engine.py
tests/streaming/: conftest.py  test_metrics.py  test_state_manager.py  test_stream_processor.py  test_window_manager.py
